--- a/.github/workflows/react-cd.yaml
+++ b/.github/workflows/react-cd.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd react
+          cd react-client
           npm install
 
       - name: Configure .env file
