--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "sqlstring": "^2.3.3"
   }
 }
