--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,10 +6,10 @@
 version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: "/react-client" # Location of package manifests
     schedule:
       interval: "daily"
-  - package-ecosystem: "pip"
-    directory: "/python"
+  - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/server" # Location of package manifests
     schedule:
       interval: "daily"
